improved loading with webp files

--- a/public/shuffle-cards.html
+++ b/public/shuffle-cards.html
@@ -139,7 +139,7 @@ document.addEventListener('DOMContentLoaded', function() {
       width: 140px;
       height: 200px;
       border-radius: 8px;
-      background-image: url('/assets/backs/card-back.png');
+      background-image: url('/assets/backs/card-back.webp');
       background-size: cover;
       background-position: center;
       background-color: #333;
