--- a/public/spread.html
+++ b/public/spread.html
@@ -11,7 +11,7 @@
 
   <!-- Preload tiny but critical assets -->
   <link rel="preload" as="font" href="/assets/fonts/BookmanJFPro-Regular.woff2" type="font/woff2" crossorigin>
-  <link rel="preload" as="image" href="/assets/backs/card-back.png">
+  <link rel="preload" as="image" href="/assets/backs/card-back.webp">
   <link rel="preload" as="image" href="/assets/erika-avatar.png">
 
   <script>
@@ -157,7 +157,7 @@
     .card.selected { box-shadow:0 0 0 3px rgba(107,70,193,.25); }
     .card-inner { position:relative; width:100%; height:100%; transform-style:preserve-3d; transition: transform .6s; }
     .card-face { position:absolute; inset:0; backface-visibility:hidden; border-radius:6px; background-size:cover; background-position:center; }
-    .card-back { background-image:url('/assets/backs/card-back.png'); }
+    .card-back { background-image:url('/assets/backs/card-back.webp'); }
     .card-front { background-image: var(--card-image); transform: rotateY(180deg); }
     .card:not(.selected) .card-inner { transform: rotateY(0deg); }
     .card.selected .card-inner { transform: rotateY(180deg); }
@@ -479,7 +479,7 @@
         spreadCards = data.spread || [];
 
         // ensure the back image is cached; faces are deferred
-        await ensureImage('/assets/backs/card-back.png');
+        await ensureImage('/assets/backs/card-back.webp');
 
         cardStack.style.transform = 'scale(1) rotate(0deg)';
         showCardSelection();
